--- a/mesut_can_gurle_cv.lyx
+++ b/mesut_can_gurle_cv.lyx
@@ -524,12 +524,13 @@ Skills
 \end_layout
 
 \begin_layout Subsection
-Programming Languages
+Technologies
 \end_layout
 
 \begin_layout Standard
 Java, REST, API, Javascript, Clojure, NodeJS, Golang, Servlet, JSP, Struts,
- JSF, GWT, Hibernate, Python, PHP, CSS, PL/SQL, HTML5, Spark
+ JSF, GWT, Hibernate, Python, PHP, CSS, PL/SQL, HTML5, Spark, Storm, Android
+ 
 \end_layout
 
 \begin_layout Subsection
@@ -790,10 +791,39 @@ Additional Information
 
 \begin_layout Standard
 \begin_inset Tabular
-<lyxtabular version="3" rows="6" columns="2">
+<lyxtabular version="3" rows="7" columns="2">
 <features rotate="0" tabularvalignment="middle">
 <column alignment="left" valignment="top">
 <column alignment="left" valignment="top">
+<row>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Date of Birth
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+March 22
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+nd
+\end_layout
+
+\end_inset
+
+ 1987
+\end_layout
+
+\end_inset
+</cell>
+</row>
 <row>
 <cell alignment="left" valignment="top" usebox="none">
 \begin_inset Text
