work experience is updated.

--- a/mesut_can_gurle_cv.lyx
+++ b/mesut_can_gurle_cv.lyx
@@ -301,6 +301,10 @@ March 2014 -
 - Real time Alerts and Reports
 \end_layout
 
+\begin_layout Standard
+- 1 year at Sydney office, then remote.
+\end_layout
+
 \end_deeper
 \begin_layout Itemize
 
