communities are added.

--- a/mesut_can_gurle_cv.lyx
+++ b/mesut_can_gurle_cv.lyx
@@ -1166,7 +1166,7 @@ One of founders in devopsturkey.org
 \begin_inset Text
 
 \begin_layout Plain Layout
-
+Devops community
 \end_layout
 
 \end_inset
